--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  integrity="sha512-papNMVt8N1Xh8TSKSPoYDjCkD7fQpI6kVX6p7vhJY1eoy1+SkkWZqjMlf+YJvG5xM/9bB3fM5kWc3fZWqC2KUg=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
